[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Arena/Tankdozer.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/asphalt.png" type="Texture" id=2]
[ext_resource path="res://blockSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Arena/Arena.gd" type="Script" id=4]
[ext_resource path="res://tank.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Control.tscn" type="PackedScene" id=6]

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 10, 10, 10 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 450, 10, 1 )

[node name="Arena" type="Spatial"]
script = ExtResource( 4 )

[node name="CSGBox" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.64815, 0 )

[node name="floor" type="CSGBox" parent="."]
width = 450.0
height = 0.001
depth = 450.0
material = SubResource( 4 )

[node name="RigidBody" type="StaticBody" parent="floor"]

[node name="CollisionShape" type="CollisionShape" parent="floor/RigidBody"]
transform = Transform( 10000, 0, 0, 0, 0, 0, 0, 0, 10000, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Control" parent="." instance=ExtResource( 6 )]

[node name="blockSpawner" parent="." instance=ExtResource( 3 )]

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -226.224 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 3 )

[node name="StaticBody2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 225.517 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody2"]
shape = SubResource( 3 )

[node name="StaticBody3" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 225, 0, 0.533676 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody3"]
shape = SubResource( 3 )

[node name="StaticBody4" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -227, 0, 0.533676 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody4"]
shape = SubResource( 3 )

[node name="tank" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.29007, 0, 39.7688 )

[connection signal="enemy_died" from="CSGBox" to="Control" method="_on_CSGBox_enemy_died"]
[connection signal="goToRoom" from="CSGBox" to="." method="_on_CSGBox_goToRoom"]
[connection signal="health_signal" from="CSGBox" to="Control" method="_on_CSGBox_health_signal"]
[connection signal="player_position" from="CSGBox" to="tank" method="_on_CSGBox_player_position"]
[connection signal="steer_signal" from="CSGBox" to="Control" method="_on_CSGBox_steer_signal"]
[connection signal="goToRoom" from="Control" to="." method="_on_Control_goToRoom"]
